--- a/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -29,9 +29,10 @@
                                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                                 <consultant role="projectManager" ref="eft:person-175">Chodrungma Kunga Chodron</consultant>
+                                <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -72,7 +73,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-27T08:27:52.008Z" user="admin">27/01/2023 08:27:52</note>
+                                <note type="lastUpdated" date-time="2023-03-06T13:42:55.082Z" user="admin">06/03/2023 13:42:55</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
@@ -117,7 +118,8 @@
                                         (update-contributors)</note>
                                 <note type="updated" update="translation-status" value="2" date-time="2023-01-27T08:26:55.388Z" user="line-tofte">2</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-27T08:26:55.388Z" user="line-tofte">Auto (update-publication-status)</note>
-                            <note type="updated" update="text-version" value="0.0.3" date-time="2023-01-27T08:27:46.365Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="text-version" value="0.0.3" date-time="2023-01-27T08:27:46.365Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-06T13:42:49.202Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
