--- a/translations/kangyur/placeholders/072-030_toh330-the_smaller_sutra_of_the_god.xml
+++ b/translations/kangyur/placeholders/072-030_toh330-the_smaller_sutra_of_the_god.xml
@@ -4,16 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lha'i mdo nyung ngu /</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">alpadevatāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Smaller Sūtra of the God</title>
-                <author role="translatorMain" ref="contributors.xml#team-50"/>
-                <consultant role="projectManager" ref="contributors.xml#person-316">Giuliano Francisco Proença</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-316">Giuliano Francisco Proença</author>
-                <editor role="proofreader" ref="contributors.xml#person-359">Daniela Espíndola</editor>
+                <title type="mainTitle" xml:lang="Sa-Ltn">alpadevatāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">lha'i mdo nyung ngu /</title>
+                <author role="translatorMain" ref="eft:team-50"/>
+                <consultant role="projectManager" ref="eft:person-316">Giuliano Francisco Proença</consultant>
+                <author role="translatorEng" ref="eft:person-316">Giuliano Francisco Proença</author>
+                <editor role="proofreader" ref="eft:person-359">Daniela Espíndola</editor>
+                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2021</date>
+                <edition>v 0.0.7 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -32,14 +33,17 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-06T13:46:29.906Z" user="admin">06/03/2023 13:46:29</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:26:53.902Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:26:53.902Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:27:11.559Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-10T08:27:30.726Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-10T08:28:22.317Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-11-01T12:57:13.438Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-01T12:57:13.438Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-06T13:46:24.047Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-06T13:46:24.047Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-03-06T13:47:19.539Z" user="admin">06/03/2023 13:47:19</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:26:53.902Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:26:53.902Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:27:11.559Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-10T08:27:30.726Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-10T08:28:22.317Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-11-01T12:57:13.438Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-01T12:57:13.438Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-06T13:46:24.047Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-06T13:46:24.047Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-06T13:47:13.661Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
