--- a/translations/kangyur/placeholders/089-002_toh545,892-the_incantation_that_which_was_spoken_by_manjusri_himself.xml
+++ b/translations/kangyur/placeholders/089-002_toh545,892-the_incantation_that_which_was_spoken_by_manjusri_himself.xml
@@ -20,10 +20,10 @@
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2021</date>
+                <edition>v 0.0.13 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-089-002"/>
                 <date/>
             </publicationStmt>
@@ -48,7 +48,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-15T14:09:42.66Z" user="admin">15/11/2022 14:09:42</note>
+                <note type="lastUpdated" date-time="2023-03-06T14:14:45.743Z" user="admin">06/03/2023 14:14:45</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:16:58.484Z" user="line-tofte">Auto (update-contributors)</note>
@@ -67,6 +67,8 @@
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-09-15T08:45:27.613Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2022-11-15T14:09:37.152Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-11-15T14:09:37.152Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-03-06T14:14:39.921Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2023-03-06T14:14:39.921Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
