--- a/translations/kangyur/placeholders/089-003_toh546,893-the_incantation_the_curse_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-003_toh546,893-the_incantation_the_curse_of_manjusri.xml
@@ -19,10 +19,10 @@
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2021</date>
+                <edition>v 0.0.11 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-089-003"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-15T14:10:50.756Z" user="admin">15/11/2022 14:10:50</note>
+                <note type="lastUpdated" date-time="2023-03-06T14:16:54.93Z" user="admin">06/03/2023 14:16:54</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:27:42.342Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:27:42.342Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:28:05.921Z" user="line-tofte">Auto (update-contributors)</note>
@@ -64,6 +64,8 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-15T08:46:59.068Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2022-11-15T14:10:45.237Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-15T14:10:45.237Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-03-06T14:16:48.991Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-03-06T14:16:48.991Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
