--- a/translations/kangyur/placeholders/089-005_toh548,894-the_names_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-005_toh548,894-the_names_of_manjusri.xml
@@ -19,10 +19,10 @@
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2021</date>
+                <edition>v 0.0.11 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-089-005"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-15T14:13:23.054Z" user="admin">15/11/2022 14:13:23</note>
+                <note type="lastUpdated" date-time="2023-03-06T14:23:32.355Z" user="admin">06/03/2023 14:23:32</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:36:08.472Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:36:08.472Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:36:30.859Z" user="line-tofte">Auto (update-contributors)</note>
@@ -64,6 +64,8 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-15T08:49:51.855Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2022-11-15T14:13:17.509Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-15T14:13:17.509Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-03-06T14:23:26.392Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-03-06T14:23:26.392Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
