--- a/translations/kangyur/placeholders/089-006_toh549,895-the_incantation_manjusris_increasing_of_insight_and_intelligence.xml
+++ b/translations/kangyur/placeholders/089-006_toh549,895-the_incantation_manjusris_increasing_of_insight_and_intelligence.xml
@@ -21,9 +21,11 @@
                 <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2021</date>
+                <edition>v 0.0.12 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.a">
@@ -51,7 +53,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-06T14:25:15.494Z" user="admin">06/03/2023 14:25:15</note>
+                <note type="lastUpdated" date-time="2023-03-06T14:25:51.63Z" user="admin">06/03/2023 14:25:51</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:38:06.845Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:38:06.845Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:38:28.251Z" user="line-tofte">Auto (update-contributors)</note>
@@ -70,6 +72,7 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-15T14:14:11.504Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2023-03-06T14:25:09.654Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-03-06T14:25:09.654Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-03-06T14:25:45.778Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
