--- a/translations/kangyur/placeholders/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
@@ -21,10 +21,10 @@
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2021</date>
+                <edition>v 0.0.11 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-089-007"/>
                 <date/>
             </publicationStmt>
@@ -49,7 +49,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-15T14:15:13.298Z" user="admin">15/11/2022 14:15:13</note>
+                <note type="lastUpdated" date-time="2023-03-06T14:27:02.236Z" user="admin">06/03/2023 14:27:02</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:40:14.374Z" user="line-tofte">Auto (update-contributors)</note>
@@ -66,6 +66,8 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-15T08:52:45.449Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2022-11-15T14:15:07.762Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-15T14:15:07.762Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-03-06T14:26:56.414Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-03-06T14:26:56.414Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
