--- a/translations/kangyur/placeholders/089-008_toh551-in_praise_of_the_acuity_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-008_toh551-in_praise_of_the_acuity_of_manjusri.xml
@@ -20,10 +20,10 @@
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2021</date>
+                <edition>v 0.0.14 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-089-008"/>
                 <date/>
             </publicationStmt>
@@ -39,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-27T09:18:33.473Z" user="admin">27/02/2023 09:18:33</note>
+                <note type="lastUpdated" date-time="2023-03-06T14:32:11.447Z" user="admin">06/03/2023 14:32:11</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:41:51.022Z" user="line-tofte">Auto (update-contributors)</note>
@@ -61,6 +61,8 @@
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-02-27T09:09:35.467Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-02-27T09:18:27.678Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2023-02-27T09:18:27.678Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-03-06T14:32:05.593Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2023-03-06T14:32:05.593Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
