--- a/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
+++ b/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
@@ -11,14 +11,15 @@
                 <title type="longTitle" xml:lang="Bo-Ltn">khams mang po pa zhes bya ba’i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">dhātubahutākasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">khams mang po’i mdo/</title>
-                <author role="translatorMain" ref="contributors.xml#team-51"/>
-                <author role="translatorEng" ref="contributors.xml#person-291">Zsuzsa Majer</author>
-                <editor role="reviser" ref="contributors.xml#person-325">William Dewey</editor>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-294">Karma Dorje (Rabjampa)</consultant>
-                <consultant role="projectManager" ref="contributors.xml#person-291">Zsuzsa Majer</consultant>
+                <author role="translatorMain" ref="eft:team-51"/>
+                <author role="translatorEng" ref="eft:person-291">Zsuzsa Majer</author>
+                <editor role="reviser" ref="eft:person-325">William Dewey</editor>
+                <consultant role="dharmaMaster" ref="eft:person-294">Karma Dorje (Rabjampa)</consultant>
+                <consultant role="projectManager" ref="eft:person-291">Zsuzsa Majer</consultant>
+                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2020</date>
+                <edition>v 0.0.13 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -37,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-06T14:59:31.8Z" user="admin">06/03/2023 14:59:31</note>
+                <note type="lastUpdated" date-time="2023-03-06T15:00:00.417Z" user="admin">06/03/2023 15:00:00</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-27T09:49:23.533Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-27T09:49:23.533Z" user="andreas">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-07-06T07:58:14.619Z" user="line-tofte">0.0.1</note>
@@ -51,10 +52,10 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-01T11:50:34.843Z" user="john">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-03-01T11:52:07.597Z" user="john">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-03-02T15:57:57.555Z" user="john">Auto (update-titles)</note>
-                <note type="title" date-time="2023-03-02T15:59:51.571Z" user="john">In the Degé and Lithang Kangyurs the Sanskrit title is given as dhātubahutakasūtra, and the Tibetan as khams mang po pa’i mdo. In other Kangyurs the titles are bahudhātukasūtra and khams manpo’i mdo.</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-03-02T15:59:51.571Z" user="john">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-03-06T14:59:26.076Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-03-06T14:59:26.076Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2023-03-06T14:59:54.564Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
