--- a/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -32,10 +32,10 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="2">
+                        <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -73,7 +73,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-03-06T13:42:55.082Z" user="admin">06/03/2023 13:42:55</note>
+                                <note type="lastUpdated" date-time="2023-03-07T13:49:01.67Z" user="admin">07/03/2023 13:49:01</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
@@ -120,6 +120,8 @@
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-27T08:26:55.388Z" user="line-tofte">Auto (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.3" date-time="2023-01-27T08:27:46.365Z" user="line-tofte">Auto (update-contributors)</note>
                             <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-06T13:42:49.202Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="translation-status" value="1.a" date-time="2023-03-07T13:48:55.987Z" user="martina-cotter">1.a</note>
+                            <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-07T13:48:55.987Z" user="martina-cotter">First published version</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -163,7 +165,7 @@
                                                 “final testament” (Tib. <foreign xml:lang="Bo-Ltn" type="term">zhal chems</foreign>) to those
                                                 gathered around him. This consists of a brief
                                                 instruction on eleven “thoughts” (Skt. <foreign xml:lang="Sa-Ltn" type="term">saṃjñāna</foreign>/<foreign xml:lang="Sa-Ltn" type="term">saṃjñā</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">’du
-                                                  shes</foreign>)<note place="end" xml:id="UT22084-072-011-7"> The word <foreign xml:lang="Sa-Ltn" type="term">samjñā</foreign>
+                                                        shes</foreign>)<note place="end" xml:id="UT22084-072-011-7"> The word <foreign xml:lang="Sa-Ltn" type="term">saṃjñā</foreign>
                                                   (Pali <foreign xml:lang="Pi-Ltn" type="term">saññā</foreign>) has a broad range of
                                                   meaning. It is often rendered “perception,” in the
                                                   sense of a mode of perceiving rather than of an
@@ -171,7 +173,7 @@
                                                   contexts in which it is better rendered by
                                                   “discernment,” “recognition,” “consciousness,”
                                                   “awareness,” “conception,” “idea,” or “notion.” In
-                                                  the entry on <foreign xml:lang="Sa-Ltn" type="term">samjñā</foreign> in his <title xml:lang="en">Buddhist Hybrid Sanskrit</title>
+                                                  the entry on <foreign xml:lang="Sa-Ltn" type="term">saṃjñā</foreign> in his <title xml:lang="en">Buddhist Hybrid Sanskrit</title>
                                                   dictionary, Franklin Edgerton nicely captures the
                                                   sense most relevant to the present sūtra:
                                                   “purposeful thought about.” It is in that sense
@@ -292,7 +294,7 @@
                                                 Stok Palace Kangyur. The Stok Palace Kangyur version
                                                 of <title xml:lang="en">Teaching the Ten
                                                         Thoughts</title>
-                        <note place="end" xml:id="UT22084-072-011-65">Tib. <title xml:lang="Bo-Ltn">’du shes bcu bstan pa’i mdo</title>, Skt. <title xml:lang="Sa-Ltn">Daśasamjñādeśasūtra</title>. This is the Sanskrit title as it is given in the Tibetan. Presumably this ought to be <title xml:lang="Sa-Ltn">Daśasamjñānirdeśasūtra</title>.</note> was also consulted for
+                        <note place="end" xml:id="UT22084-072-011-65">Tib. <title xml:lang="Bo-Ltn">’du shes bcu bstan pa’i mdo</title>, Skt. <title xml:lang="Sa-Ltn">Daśasaṃjñādeśasūtra</title>. This is the Sanskrit title as it is given in the Tibetan. Presumably this ought to be <title xml:lang="Sa-Ltn">Daśasaṃjñānirdeśasūtra</title>.</note> was also consulted for
                                                 comparison, and a translation of that text has been
                                                 included as an appendix. </p>
                                 </div>
