--- a/translations/kangyur/placeholders/064-007_toh237-a_minor_chapter_on_demons.xml
+++ b/translations/kangyur/placeholders/064-007_toh237-a_minor_chapter_on_demons.xml
@@ -16,12 +16,12 @@
     <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.2 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-064-007"/>
-    <date/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh237" type="text">
@@ -35,9 +35,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-30T08:10:33.252Z" user="admin">30/04/2020 08:10:33</note>
+                <note type="lastUpdated" date-time="2023-03-08T11:05:37.612Z" user="admin">08/03/2023 11:05:37</note>
             
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-30T08:10:15.657Z" user="line-tofte">0.0.1</note>
+    <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-30T08:10:15.657Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="2.h" date-time="2023-03-08T11:05:31.914Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-08T11:05:31.914Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
