--- a/translations/kangyur/placeholders/064-007_toh237-a_minor_chapter_on_demons.xml
+++ b/translations/kangyur/placeholders/064-007_toh237-a_minor_chapter_on_demons.xml
@@ -4,19 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">bdud kyi le'u nyi tshe phyung ba/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn"/>
                 <title type="mainTitle" xml:lang="en">A Minor Chapter on Demons</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">bdud kyi le'u nyi tshe phyung ba/</title>
+                <title type="otherTitle" xml:lang="en">A Minor Chapter on Demons, Extracted from 'The Great Diadem,' Book Nine</title>
                 <title type="otherTitle" xml:lang="en">(no Sanskrit title, translated from part of Chinese Śūraṃgamasūtra)</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gtsug gtor chen po bam po dgu pa las bdud kyi le'u nyi tshe phyung ba</title>
-                <title type="otherTitle" xml:lang="en">A Minor Chapter on Demons, Extracted from 'The Great Diadem,' Book Nine</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-            <author role="translatorEng" ref="contributors.xml#person-312">Nick Schmidt</author>
-                <editor role="reviser" ref="contributors.xml#person-50">Dr. Andreas Doctor</editor>
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <author role="translatorEng" ref="eft:person-312">Nick Schmidt</author>
+                <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -35,9 +35,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-08T11:05:37.612Z" user="admin">08/03/2023 11:05:37</note>
-            
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-30T08:10:15.657Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="2.h" date-time="2023-03-08T11:05:31.914Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-08T11:05:31.914Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-03-08T11:41:11.362Z" user="admin">08/03/2023 11:41:11</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-30T08:10:15.657Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-03-08T11:05:31.914Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-08T11:05:31.914Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-08T11:41:05.498Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
