--- a/translations/kangyur/placeholders/064-007_toh237-a_minor_chapter_on_demons.xml
+++ b/translations/kangyur/placeholders/064-007_toh237-a_minor_chapter_on_demons.xml
@@ -13,10 +13,10 @@
                 <author role="translatorEng" ref="eft:person-312">Nick Schmidt</author>
                 <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
                 <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
-                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.4 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -35,11 +35,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-08T11:41:11.362Z" user="admin">08/03/2023 11:41:11</note>
+                <note type="lastUpdated" date-time="2023-03-08T11:41:31.771Z" user="admin">08/03/2023 11:41:31</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-30T08:10:15.657Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2023-03-08T11:05:31.914Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-08T11:05:31.914Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-08T11:41:05.498Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-08T11:41:26.026Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
