--- a/translations/kangyur/placeholders/096-006_toh757,947-the_sutra_of_great_strength.xml
+++ b/translations/kangyur/placeholders/096-006_toh757,947-the_sutra_of_great_strength.xml
@@ -16,12 +16,12 @@
     <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.2 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-096-006"/>
-    <date/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh757" type="text">
@@ -44,9 +44,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-30T08:27:50.072Z" user="admin">30/04/2020 08:27:50</note>
+                <note type="lastUpdated" date-time="2023-03-09T10:05:40.162Z" user="admin">09/03/2023 10:05:40</note>
             
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T12:25:11.308Z" user="line-tofte">0.0.1</note>
+    <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T12:25:11.308Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="2.h" date-time="2023-03-09T10:05:34.507Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-09T10:05:34.507Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
