--- a/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
+++ b/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
@@ -14,10 +14,10 @@
                 <sponsor ref="sponsors.xml#sponsor-2">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-087-010"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-11T13:17:04.141Z" user="admin">11/01/2022 13:17:04</note>
+                <note type="lastUpdated" date-time="2023-03-09T14:26:26.777Z" user="admin">09/03/2023 14:26:26</note>
             
     <note type="updated" update="translation-status" value="3" date-time="2020-09-17T11:56:52.485Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-09-17T11:56:52.485Z" user="line-tofte">0.0.1</note>
@@ -46,6 +46,8 @@
     <note type="updated" update="text-version" value="0.0.5" date-time="2022-01-11T13:16:41.822Z" user="line-tofte">Auto (update-publication-status)</note>
 
     <note type="updated" update="text-version" value="0.0.6" date-time="2022-01-11T13:16:58.2Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="translation-status" value="2.h" date-time="2023-03-09T14:26:21.093Z" user="line-tofte">2.h</note>
+    <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-09T14:26:21.093Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
