--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -28,9 +28,9 @@
                                         the Buddha</title>
                                 <title type="otherTitle" xml:lang="en">Discernment of the
                                         Dharma</title>
-                                <title type="otherTitle" xml:lang="zh">佛藏斷除敗壞戒律經</title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">tshul khrims ’chal ba
                                         tshar bcod pa </title>
+                                <title type="otherTitle" xml:lang="zh">佛藏斷除敗壞戒律經</title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">gzhi brtsams pa </title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">mdo sde rab tu rnam par
                                         ’byed pa </title>
@@ -50,9 +50,10 @@
                                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                                 <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
+                                <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.7 <date>2022</date>
+                <edition>v 0.0.8 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -94,7 +95,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-03-10T08:29:47.93Z" user="admin">10/03/2023 08:29:47</note>
+                                <note type="lastUpdated" date-time="2023-03-10T08:30:14.372Z" user="admin">10/03/2023 08:30:14</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary
@@ -137,7 +138,8 @@
                                 <note type="updated" update="text-version" value="0.0.4" date-time="2023-02-13T17:00:25.343Z" user="amy">Auto (update-sponsorship)</note>
                                 <note type="updated" update="text-version" value="0.0.5" date-time="2023-02-13T17:06:11.049Z" user="amy">Auto (update-sponsorship)</note>
                                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-02-13T17:36:54.77Z" user="amy">Auto (update-sponsorship)</note>
-                            <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-10T08:29:42.145Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-10T08:29:42.145Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-10T08:30:08.597Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
