--- a/translations/kangyur/translations/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
+++ b/translations/kangyur/translations/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
@@ -13,9 +13,9 @@
                                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle
                                         Discourse: Discussions of Thus-Gone Ones</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Āryatathāgata­saṅgīti­nāmamahāyāna­sūtra</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པ་བགྲོ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs
                                         pa bgro ba zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པ་བགྲོ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                                 <title type="otherTitle" xml:lang="zh">《如來議論經》</title>
                                 <author role="translatorMain" ref="eft:team-9">Translated by the
                                         Dharmachakra Translation Committee<lb/>under the patronage
@@ -28,10 +28,11 @@
                                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                                 <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
+                                <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
                                 <sponsor ref="sponsors.xml#sponsor-47">马珂，王晓娟</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -74,7 +75,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-11-24T10:24:48.052Z" user="admin">24/11/2022 10:24:48</note>
+                                <note type="lastUpdated" date-time="2023-03-10T08:30:58.377Z" user="admin">10/03/2023 08:30:58</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2019-06-27T14:16:17.494Z" user="john">2.g</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-27T13:01:38.603Z" user="mike">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:38.603Z" user="mike">2.h</note>
@@ -109,7 +110,8 @@
                                 <note type="updated" update="translation-status" value="2" date-time="2022-10-21T08:02:10.765Z" user="line-tofte">2</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-21T08:02:10.765Z" user="line-tofte">Auto (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-24T10:24:22.442Z" user="line-tofte">Auto (update-contributors)</note>
-                            <note type="updated" update="text-version" value="0.0.4" date-time="2022-11-24T10:24:46.562Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="text-version" value="0.0.4" date-time="2022-11-24T10:24:46.562Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-10T08:30:52.616Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
