--- a/translations/kangyur/placeholders/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
+++ b/translations/kangyur/placeholders/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.6 <date>2019</date>
+                <edition>v 0.1.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-043-010"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T12:15:16.472Z" user="admin">30/06/2022 12:15:16</note>
+                <note type="lastUpdated" date-time="2023-03-13T08:26:14.165Z" user="admin">13/03/2023 08:26:14</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:19:48.982Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:19:48.982Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-05-11T08:48:24.545Z" user="line-tofte">2.h</note>
@@ -49,6 +49,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-06-30T11:54:15.672Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.1.5" date-time="2022-06-30T11:54:15.672Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.6" date-time="2022-06-30T12:15:08.691Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-13T08:26:08.501Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.1.7" date-time="2023-03-13T08:26:08.501Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
