--- a/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -32,10 +32,10 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1.a">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -73,7 +73,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-03-07T13:49:01.67Z" user="admin">07/03/2023 13:49:01</note>
+                                <note type="lastUpdated" date-time="2023-03-13T16:40:33.685Z" user="admin">13/03/2023 16:40:33</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
@@ -122,6 +122,8 @@
                             <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-06T13:42:49.202Z" user="line-tofte">Auto (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-03-07T13:48:55.987Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-07T13:48:55.987Z" user="martina-cotter">First published version</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2023-03-13T16:40:29.291Z" user="andre">1</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2023-03-13T16:40:29.291Z" user="andre">Glossary integration revised - activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -489,7 +491,7 @@
                                                 Thoughts”</trailer>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-072-011-53">
@@ -532,29 +534,12 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-072-011-56">
-                                                  <term>blessed one</term>
-                                                  <term xml:lang="Bo-Ltn">bcom ldan ’das </term>
-                                                  <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
-                                                  <term xml:lang="Sa-Ltn">bhagavat</term>
-                                                  <term type="definition">In Buddhist literature, an
-                                                  epithet applied to buddhas, most often to
-                                                  Śākyamuni. The Sanskrit term generally means
-                                                  “possessing fortune,” but in specifically Buddhist
-                                                  contexts it implies that a buddha is in possession
-                                                  of six auspicious qualities (<foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign>)
-                                                  associated with complete awakening. The Tibetan
-                                                  term—where <foreign xml:lang="Bo-Ltn" type="term">bcom</foreign> is said to refer to “subduing” the
-                                                  four māras, <foreign xml:lang="Bo-Ltn" type="term">ldan</foreign> to “possessing” the great
-                                                  qualities of buddhahood, and <foreign xml:lang="Bo-Ltn" type="term">’das</foreign> to
-                                                  “going beyond” saṃsāra and nirvāṇa—possibly
-                                                  reflects the commentarial tradition where the
-                                                  Sanskrit <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> is interpreted, in addition,
-                                                  as “one who destroys the four māras.” This is
-                                                  achieved either by reading <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> as <foreign xml:lang="Sa-Ltn" type="term">bhagnavat</foreign> (“one who broke”)
-                                                  or by tracing the word <foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign> to the root <foreign xml:lang="Sa-Ltn" type="term">√bhañj</foreign>
-                                                  (“to break”).</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-072-011-56" type="term" mode="match">
+                            <term>blessed one</term>
+                            <term xml:lang="Bo-Ltn">bcom ldan ’das</term>
+                            <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="Sa-Ltn">bhagavat</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="person" xml:id="UT22084-072-011-58">
