--- a/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
+++ b/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
@@ -42,10 +42,10 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1">
+                        <publicationStmt status="2.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -96,7 +96,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-03-13T16:00:20.91Z" user="admin">13/03/2023 16:00:20</note>
+                                <note type="lastUpdated" date-time="2023-03-13T16:41:12.343Z" user="admin">13/03/2023 16:41:12</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:16:58.484Z" user="line-tofte">Auto
@@ -133,6 +133,8 @@
                                         (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1" date-time="2023-03-13T16:00:16.533Z" user="line-tofte">1</note>
                             <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-13T16:00:16.533Z" user="line-tofte">Auto (update-publication-status)</note>
+                            <note type="updated" update="translation-status" value="2.a" date-time="2023-03-13T16:41:07.959Z" user="martina-cotter">2.a</note>
+                            <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-13T16:41:07.959Z" user="martina-cotter">Auto (update-publication-status)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
